footer alignmnet resolved

--- a/style.css
+++ b/style.css
@@ -381,11 +381,15 @@ form .btn2{
 
 .copyright{
     width: 100%;
-    text-align: left;
+    text-align: center;
     padding: 12px 0;
     background:#262626;
     font-weight: 300;
     margin-top: 20px;
+}
+
+.copyright p {
+    text-align: center;
 }
 
 
